{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "f416476d-c245-403c-9f5d-fdcb9ad0fea2",
            "actions": [
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "f094d26d-5552-4ffd-8945-40e6a78f0888",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "7544c6fb-4a90-49dd-9c5b-1f7ca0846eed",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "47b06fe3-d653-4af5-9509-2cf7a5e17dab",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "089192cb-e3fd-4d49-b3ab-ebd0cb66b19a",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}